--- a/src/Assets/scss/1-helpers/_variables.scss
+++ b/src/Assets/scss/1-helpers/_variables.scss
@@ -20,8 +20,8 @@ $color-bg: #f4f8fb !default;
 $color-menu: #ffffff !default;
 $color-border: #ededed !default;
 
-$color-input: #d3d9f0 !default;
-$color-backinput: #f9fbff !default;
+$color-input: #e4e7eb !default;
+$color-backinput: #fcfdfe !default;
 
 $color-white: #fff !default;
 // Fonts
