--- a/src/Assets/scss/5-layout/_forms.scss
+++ b/src/Assets/scss/5-layout/_forms.scss
@@ -1,16 +1,16 @@
 ::placeholder,
 select:invalid,
 select option[value=""] {
-  color: darken($color-input, 10%);
+  color: $color-text;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
 }
 
 label {
   margin-bottom: 4px;
   display: block;
-  font-size: 0.9rem;
-  color: darken($color-text, 9%);
+  font-size: 13px;
+  color: #1f2c52;
 }
 
 input,
@@ -21,7 +21,7 @@ select {
   background-size: auto;
   font: inherit;
   font-family: $font-primary;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 1.3;
   color: $color-primary;
   resize: none;
@@ -29,7 +29,7 @@ select {
   border: 1px solid $color-input;
   outline: 1px solid transparent;
   min-height: $inputHeight;
-  background-color: transparent;
+  background-color: $color-backinput;
   position: relative;
   border-radius: $border-radius;
   padding: 0 15px 0 15px;
