--- a/src/Assets/scss/5-layout/_searchbar.scss
+++ b/src/Assets/scss/5-layout/_searchbar.scss
@@ -1,23 +1,14 @@
 .Searchbar {
-  height: calc(100vh - 30px);
-  min-width: 0;
-  width: 0;
+  height: 60px;
+  width: 100%;
   background-color: $color-menu;
+  border-bottom: 1px solid $color-border;
   padding: 0;
   overflow: hidden;
   color: $color-secondary;
   z-index: 1;
   border-radius: 25px 0 0 0;
-
-  &.active {
-    min-width: 270px;
-    width: 16.5vw;
-    padding: 0 24px;
-
-    & ~ .Content {
-      border-radius: 0;
-    }
-  }
+  box-shadow: 0px 27px 13px -14px #e9f1f7;
 
   .searchbar__form {
     flex: 1;
@@ -26,20 +17,6 @@
 
     button {
       margin-top: 1rem;
-    }
-  }
-
-  h3 {
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 5px;
-      right: 0;
-      width: 100%;
-      height: 8px;
-      background-color: $color-secondary;
-      opacity: 0.33;
-      z-index: -1;
     }
   }
 }
