--- a/src/Assets/scss/1-helpers/_functions.scss
+++ b/src/Assets/scss/1-helpers/_functions.scss
@@ -4,3 +4,7 @@
 @function image($path, $base: $image-path) {
   @return url($base + $path);
 }
+
+@function themed($key) {
+  @return map-get($theme-map, $key);
+}
