--- a/src/Assets/scss/2-vendors/_bootstrap-utilities.scss
+++ b/src/Assets/scss/2-vendors/_bootstrap-utilities.scss
@@ -1291,6 +1291,11 @@
 .text-center {
   text-align: center !important;
 }
+
+.justify-content-center {
+  justify-content: center !important;
+}
+
 @media (min-width: 576px) {
   .text-sm-left {
     text-align: left !important;
