--- a/src/Assets/scss/3-base/_helpers.scss
+++ b/src/Assets/scss/3-base/_helpers.scss
@@ -14,8 +14,8 @@ a:active {
 }
 
 input::selection {
-  color: inherit;
-  background: #5c1fbf;
+  color: $color-white;
+  background: $color-primary;
 }
 
 html {
@@ -69,5 +69,47 @@ ul {
   }
   to {
     background-color: rgba(0, 0, 0, 0.85);
+  }
+}
+
+.fade-exit {
+  opacity: 0;
+  animation: slideIn 0.4s ease;
+}
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+  animation: slideOut 0.4s ease;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+}
+
+@keyframes slideIn {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+  90% {
+    transform: translate(0, 100px);
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes slideOut {
+  0% {
+    opacity: 0;
+    transform: translate(0, -100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0);
   }
 }
