--- a/src/Assets/scss/3-base/_typography.scss
+++ b/src/Assets/scss/3-base/_typography.scss
@@ -2,8 +2,6 @@
  * Default font family, size and color
  */
 
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&display=swap");
-
 body {
   font-family: $font-primary;
   font-size: $font-base-size;
@@ -18,44 +16,30 @@ h1,
 .h1 {
   font-size: 3rem;
   line-height: 3.9375rem;
-  margin-top: 1.3125rem;
-  margin-bottom: 2.625rem;
-  font-weight: 700;
+  font-weight: 800;
 }
 h2,
 .h2 {
   font-size: 2.375rem;
-  line-height: 2.625rem;
-  margin-top: 1.3125rem;
-  margin-bottom: 1.3125rem;
+  line-height: 1.5;
 }
 h3,
 .h3 {
   font-size: 1.9375rem;
-  line-height: 2.625rem;
-  margin-top: 1.3125rem;
-  margin-bottom: 0rem;
+  line-height: 1.4;
 }
 h4,
 .h4 {
   font-size: 1.5625rem;
-  line-height: 2.625rem;
-  margin-top: 1.3125rem;
-  margin-bottom: 0rem;
+  line-height: 1.3;
 }
 h5,
 .h5 {
   font-size: 1.2rem;
-  line-height: 1.3125rem;
-  margin-top: 1.3125rem;
-  margin-bottom: 0rem;
 }
 h6,
 .h5 {
   font-size: 1rem;
-  line-height: 1.3125rem;
-  margin-top: 1.3125rem;
-  margin-bottom: 0rem;
 }
 p,
 ul,
