--- a/src/Assets/scss/4-components/_box.scss
+++ b/src/Assets/scss/4-components/_box.scss
@@ -2,18 +2,149 @@
   background-color: $color-menu;
   border-radius: $border-radius;
   box-shadow: $box-shadow;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 
-  h6 {
-    text-transform: uppercase;
-    padding: 17px 25px 0px;
+  .box__conteudoWrapper {
+    flex: 1 1;
+
+    .box__titulo {
+      flex: 1 1;
+      padding: 15px 30px 0 30px;
+
+      h6 {
+        color: rgba($color-primary, 0.7);
+        font-size: 13px;
+        font-weight: 600;
+        text-transform: uppercase;
+      }
+    }
+
+    .box__conteudo {
+      padding: 0 30px 15px 30px;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      align-content: stretch;
+      align-items: center;
+
+      .box__dados {
+        display: flex;
+        flex-wrap: wrap;
+        h2 {
+          font-weight: 800;
+        }
+        svg {
+          margin-left: 5px;
+          width: 16px;
+          margin-right: 5px;
+          fill: $color-text;
+        }
+        span {
+          display: flex;
+          flex-wrap: wrap;
+          align-items: center;
+          font-size: 15px;
+          color: $color-text;
+          margin-left: 0.5rem;
+
+          &.pos {
+            b {
+              font-weight: 600;
+              color: $color-positivo;
+            }
+            svg {
+              fill: $color-positivo;
+            }
+          }
+          &.neg {
+            b {
+              font-weight: 600;
+              color: $color-error;
+            }
+            svg {
+              fill: $color-error;
+            }
+          }
+        }
+      }
+
+      .box__grafico {
+        flex: 1 0 70%;
+        height: 260px;
+        max-width: 100%;
+      }
+    }
+
+    &.grafico {
+      .box__titulo {
+        padding: 15px 30px 8px 30px;
+        border-bottom: 1px solid $color-border;
+      }
+      .box__conteudo {
+        padding: 15px 30px 15px 30px;
+        max-width: calc(100vw - 300px);
+      }
+    }
+    &.vertical {
+      .box__conteudo {
+        justify-content: center;
+        text-align: center;
+        padding: 0 30px 22px 30px;
+
+        .box__dados {
+          flex-direction: column;
+          .box__titulo {
+            padding-top: 0;
+          }
+          span {
+            margin: 0 auto;
+          }
+        }
+      }
+      .box__iconeWrapper {
+        padding: 22px 0 9px 0;
+      }
+    }
+  }
+}
+
+.box__informacao {
+  background-color: rgba($color-off3, 0.15);
+  border-radius: $border-radius;
+  border: 2px solid rgba($color-off3, 0.7);
+  justify-content: center;
+
+  h4 {
     color: $color-primary;
+    font-weight: 600;
   }
+  p {
+    color: $color-text;
+  }
+}
 
-  .box__titulo {
-    padding: 20px 25px 0px;
-    border-bottom: 1px solid $color-border;
-  }
-  .box__conteudo {
-    padding: 30px 25px 45px;
+.box__iconeWrapper {
+  padding-left: 30px;
+}
+
+.box__icone {
+  width: 45px;
+  height: 45px;
+  background-color: rgba($color-text, 0.15);
+  border-radius: 50%;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+
+  svg {
+    width: 100%;
+    height: auto;
+    fill: $color-text;
   }
 }
