--- a/src/Assets/scss/4-components/_modal.scss
+++ b/src/Assets/scss/4-components/_modal.scss
@@ -1,4 +1,4 @@
-.modal {
+.Modal {
   z-index: 2000;
   position: fixed;
   top: 0px;
@@ -23,77 +23,66 @@
     right: 0;
   }
 
-  .modal__card {
+  .modal__wrapper {
     position: relative;
-    width: 100vw;
-    max-width: 100vw;
+    width: 100%;
+    max-width: 568px;
     max-height: 100%;
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     box-shadow: rgba(0, 0, 0, 0.28) 0px 8px 28px;
     border-radius: $border-radius;
-    background: rgb(255, 255, 255);
+    background: $color-white;
     overflow-x: hidden;
     margin: 0 auto;
 
-    @include min-width($bp-small) {
-      width: 100%;
-      max-width: 568px;
-
-      &.lg {
-        max-width: 900px;
-      }
-    }
-
-    .modal__header {
+    .modal__titulo {
       padding: 1.25rem 0 0.7rem;
       margin-bottom: 0.7rem;
       text-align: center;
       position: relative;
-      border-bottom: 1px solid #f1f1f1;
-      color: $color-secondary;
+      border-bottom: 1px solid $color-border;
+      color: $color-primary;
       z-index: 2;
+    }
 
-      .modal__fechar {
+    .modal__fechar {
+      position: absolute;
+      right: 1rem;
+      top: 1rem;
+      font-size: 2.2rem;
+      line-height: 1.2rem;
+      cursor: pointer;
+
+      &::before {
+        content: "";
         position: absolute;
-        right: 1rem;
-        top: 1rem;
-        font-size: 2.2rem;
-        line-height: 1.2rem;
-        cursor: pointer;
+        width: 0px;
+        height: 0px;
+        top: -50%;
+        left: -50%;
+        background-color: $color-menu;
+        border-radius: 100%;
+        padding: 20px;
+        overflow: hidden;
+        z-index: -1;
+        transform: scale(0);
+        opacity: 0;
+        transition: all 200ms ease-in-out;
+      }
 
+      &:hover {
         &::before {
-          content: "";
-          position: absolute;
-          width: 0px;
-          height: 0px;
-          top: -50%;
-          left: -50%;
-          background: #f1f1f1;
-          border-radius: 100%;
-          padding: 20px;
-          overflow: hidden;
-          z-index: -1;
-          transform: scale(0);
-          opacity: 0;
-          transition: all 200ms ease-in-out;
-        }
-
-        &:hover {
-          &::before {
-            opacity: 1;
-            transform: scale(1);
-          }
+          opacity: 1;
+          transform: scale(1);
         }
       }
     }
 
     .modal__corpo {
-      padding: 0 1.5rem 1.5rem;
+      padding: 2rem 4.5rem 2rem;
       overflow: auto !important;
-      @include min-width($bp-small) {
-        padding: 0 4.5rem 2rem;
-      }
 
       .modal__trocar {
         display: inline-block;
