--- a/src/Assets/scss/5-layout/_forms.scss
+++ b/src/Assets/scss/5-layout/_forms.scss
@@ -25,7 +25,7 @@ select {
   line-height: 1.3;
   color: $color-primary;
   resize: none;
-  font-weight: 700;
+  font-weight: 600;
   border: 1px solid $color-input;
   outline: 1px solid transparent;
   min-height: $inputHeight;
@@ -69,18 +69,18 @@ input {
 .input-wrapper {
   position: relative;
 
-  i {
+  svg {
     position: absolute;
-    left: 0.56rem;
+    left: 1.5rem;
     top: 50%;
     transform: translateY(-50%);
     z-index: 2;
-    font-size: 1.2rem;
-    color: #656464;
+    fill: $color-primary;
+    width: 22px;
     pointer-events: none;
 
-    & ~ .text-input {
-      padding-left: 2.7rem;
+    & ~ input {
+      padding-left: 4.5rem;
     }
   }
 
