--- a/src/Assets/scss/5-layout/_grid.scss
+++ b/src/Assets/scss/5-layout/_grid.scss
@@ -4,19 +4,45 @@
 
 .Main {
   display: flex;
-  flex-wrap: wrap;
+  overflow-x: hidden;
+  position: relative;
+
+  .Main__toggle {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: white;
+    z-index: 89;
+  }
 
   .Content {
-    flex: 1;
+    flex-grow: 1;
     background-color: $color-bg;
     border-radius: 25px 0 0 0;
 
     .Componentes {
       padding: 35px 45px;
-      overflow: scroll;
-      height: 100vh;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      height: calc(100vh - 80px);
+
+      .componenteWrapper {
+        @media (min-width: 1650px) {
+          max-width: 1410px;
+          margin: 0 auto;
+        }
+
+        @media (min-width: 1940px) {
+          max-width: 1360px;
+          margin: 0 auto;
+        }
+      }
     }
   }
+}
+
+section {
+  margin-top: 2rem;
 }
 
 h2.titulo,
@@ -28,6 +54,7 @@ h4.titulo {
   position: relative;
   display: inline-block;
   font-weight: 700;
+  margin-bottom: 30px;
   z-index: 1;
 
   &::before {
@@ -36,9 +63,9 @@ h4.titulo {
     display: flex;
     font-size: 1.4em;
     position: absolute;
-    left: -20px;
+    left: -12px;
     width: 30px;
-    top: 0px;
+    top: -8px;
     bottom: 0;
     z-index: -1;
   }
