--- a/src/Assets/scss/index.scss
+++ b/src/Assets/scss/index.scss
@@ -14,6 +14,7 @@
 
 @import "4-components/carregando";
 @import "4-components/box";
+@import "4-components/posts";
 @import "4-components/perfil";
 @import "4-components/modal";
 @import "4-components/button";
@@ -27,4 +28,5 @@
 @import "5-layout/tabela";
 
 @import "6-pages/home";
+@import "6-pages/competidores";
 @import "6-pages/login";
