--- a/src/Assets/scss/1-helpers/_variables.scss
+++ b/src/Assets/scss/1-helpers/_variables.scss
@@ -21,7 +21,7 @@ $color-text: #6e6f77 !default;
 
 $color-bg: #f4f8fb !default;
 $color-menu: #ffffff !default;
-$color-border: #e9e9e9 !default;
+$color-border: #f3f3f3 !default;
 
 $color-input: #e4e7eb !default;
 $color-backinput: #fcfdfe !default;
@@ -31,7 +31,7 @@ $color-white: #fff !default;
 $color-error: #f12b2c !default;
 $color-positivo: #55ae55 !default;
 
-$color-off1: #f63770 !default;
+$color-off1: #49d399 !default;
 $color-off2: #fc8a4a !default;
 $color-off3: #5d8eff !default;
 
