--- a/src/Assets/scss/4-components/_button.scss
+++ b/src/Assets/scss/4-components/_button.scss
@@ -19,6 +19,7 @@ button {
   padding-right: 22px;
   min-width: 71.19349550499538px;
   border: none;
+  transition: $transition;
 
   &.sm {
     padding-top: 6px;
@@ -88,6 +89,10 @@ button {
     &.secondary {
       border: 1px solid $color-secondary;
       color: $color-secondary;
+    }
+    &.error {
+      border: 1px solid $color-error;
+      color: $color-error;
     }
   }
 
