--- a/src/Assets/scss/1-helpers/_variables.scss
+++ b/src/Assets/scss/1-helpers/_variables.scss
@@ -3,6 +3,7 @@
  */
 
 @import url("https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700,800,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap");
 // Breakpoints
 
 $bp-small: 768px;
@@ -21,7 +22,7 @@ $color-text: #6e6f77 !default;
 
 $color-bg: #f4f8fb !default;
 $color-menu: #ffffff !default;
-$color-border: #f3f3f3 !default;
+$color-border: #e0e1ea !default;
 
 $color-input: #e4e7eb !default;
 $color-backinput: #fcfdfe !default;
@@ -41,7 +42,9 @@ $font-base-size: 15px !default;
 $font-primary: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
   "Segoe UI Symbol" !important;
-
+$font-titulo: "Catamaran", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  "Segoe UI Symbol" !important;
 // Miscellaneous
 $image-path: "/assets/images";
 
