--- a/src/Assets/scss/3-base/_typography.scss
+++ b/src/Assets/scss/3-base/_typography.scss
@@ -13,34 +13,51 @@ body {
 }
 
 h1,
-.h1 {
-  font-size: 3rem;
-  line-height: 3.9375rem;
-  font-weight: 800;
-}
 h2,
-.h2 {
-  font-size: 2.375rem;
-  line-height: 1.5;
-}
 h3,
-.h3 {
-  font-size: 1.9375rem;
-  line-height: 1.4;
+h4 {
+  margin: 0 0 16px;
+  font-family: $font-titulo;
+  text-transform: none;
 }
-h4,
-.h4 {
-  font-size: 1.5625rem;
-  line-height: 1.3;
+
+* + h1,
+* + h2,
+* + h3,
+* + h4 {
+  margin-top: 32px;
 }
-h5,
-.h5 {
-  font-size: 1.2rem;
+
+h1 {
+  font-size: 2.4rem;
 }
-h6,
-.h5 {
-  font-size: 1rem;
+
+h1,
+h2 {
+  font-weight: 400;
+  line-height: 1.25;
 }
+
+h2 {
+  font-size: 1.7rem;
+}
+
+h3 {
+  font-size: 1.3rem;
+}
+
+h3,
+h4 {
+  font-weight: 400;
+  line-height: 1.25;
+}
+
+h4 {
+  color: #676767;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+}
+
 p,
 ul,
 ol,
