--- a/src/Assets/scss/4-components/_posts.scss
+++ b/src/Assets/scss/4-components/_posts.scss
@@ -3,12 +3,36 @@
     margin-bottom: 0.5rem;
     padding-bottom: 8px;
     width: 100%;
-    h4 {
-      font-weight: 600;
+    font-weight: 600;
+    font-size: 2rem;
+    line-height: 1.5;
 
-      span {
-        color: $color-off3;
-        text-decoration: underline;
+    span {
+      color: $color-off3;
+      position: relative;
+
+      &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 4px;
+        width: 100%;
+        height: 7px;
+        background-color: $color-off3;
+        opacity: 0.3;
+      }
+    }
+    svg {
+      vertical-align: middle;
+      width: 18px;
+      margin-left: 4px;
+    }
+  }
+
+  .destaque {
+    .post__box {
+      .post__foto {
+        padding-top: 100%;
       }
     }
   }
@@ -27,6 +51,9 @@
       width: 100%;
       padding-top: 75%;
       background-color: rgb(202, 202, 202);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
     .post__info {
       background-color: $color-white;
@@ -37,7 +64,7 @@
       flex-direction: column;
       justify-content: space-around;
 
-      .post__titulo {
+      .post__nome {
         border-bottom: 1px solid $color-border;
         color: $color-primary;
         font-weight: 600;
