--- a/src/Assets/scss/5-layout/_searchbar.scss
+++ b/src/Assets/scss/5-layout/_searchbar.scss
@@ -14,10 +14,46 @@
   padding-right: 50px;
   .searchbar__form {
     flex: 1;
+    display: flex;
     position: relative;
+    align-items: center;
+    padding: 0 20px;
+
     input {
       width: 100%;
       border: none;
+      padding: 14px 10px;
+      color: $color-primary;
+      outline: none;
+      font-size: 14px;
+
+      &:focus {
+        border: none;
+      }
+    }
+  }
+
+  .searchbar__perfil {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 25px;
+      border-radius: 50%;
+    }
+    .searchbar__perfil--dados {
+      margin-left: 10px;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+
+      div {
+        color: $color-primary;
+        font-size: 14px;
+        font-weight: 600;
+      }
     }
   }
 }
